# libigl-tutorial

./: .gitignore  403.cpp  CMakeLists.txt  bbw.cpp  main.cpp  smoothing.cpp
cpp_input/: cactus01.mesh  cactus01.tgf  mesh.mesh  mesh.tgf
maya_scripts/: csvToMaya.py  mayaToCsv.py  mayaToCsv2.py  svgToMaya.py
